more informative results section

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,6 @@ pick the movies.
                     <p class="subheading">Most Interconnected can take up to 30 seconds.
                     More information regarding these algorithms can be found in the <a href="FAQ.html">FAQ</a>.</p>
                 </div>
-                <div id="recs" class="hidden"></div>
                 <button id="previous" disabled>Reset</button>
                 <button id="next">Next</button>
             </div>
@@ -99,6 +98,12 @@ pick the movies.
                     <p id="captain-marvel">Captain Marvel</p>
                 </div>
             </div>
+        </div>
+        <div id="results" class="hidden">
+            <h2>Results</h2>
+            <p id="recs"></p>
+            <h2>Recommended Watch Order</h2>
+            <ol id = "watch-order"></ol>
         </div>
     </div>
     <div class="col-sm-12 col-md-7 hidden">
