--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@ pick the movies.
 </head>
 <body>
     <h1>Which Marvel Movies Should I Watch?</h1>
-    <h2 class="subheading">A web app for casual viewers who don't want to watch every movie.</h2>
+    <h2 class="subheading">For casual viewers who don't want to watch every movie.</h2>
     <p id="error" class="hidden"></p>
     <div class="container-fluid">
         <div id="main" class="row">
