added related projects and updated FAQs

--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -9,10 +9,11 @@ The FAQ page for the Marvel Movie Picker Helper Wizard App.
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="faq.css">
-    <title>Frequently Asked Questions</title>
+    <title>Frequently Asked Questions - Which Marvel Movies Should I Watch?</title>
 </head>
 <body>
-    <h1>Which MCU Movies Should I Watch?</h1>
+    <h1>Which Marvel Movies Should I Watch?</h1>
+    <h2 class="subheading">For casual viewers who don't want to watch every movie.</h2>
     <h2>Frequently Asked Questions</h2>
     <header><a href="/"><em>Return to Main Page</em></a></header>
     <h3>General</h3>
@@ -22,10 +23,10 @@ The FAQ page for the Marvel Movie Picker Helper Wizard App.
         When you watch the movies you've been wanting to see, you probably will want to have seen a few other movies
         first so you have proper context for the movies you're watching. This app will give you recommendations for
         which other movies to watch first.</p>
-    <h4>Why did I get fewer movies than I requested?</h4>
+    <!--<h4>Why did I get fewer movies than I requested?</h4>
     <p>The algorithms recommend you movies to watch before you watch your selected movies. You will never be recommended
     movies released after your newest selected movie, which can result in fewer recommendations
-    than you requested.</p>
+    than you requested.</p>-->
     <h4>What does MCU stand for?</h4>
     <p>The MCU is the Marvel Cinematic Universe, which is the setting of every film made by Marvel Studios, and
         the upcoming Disney+ shows made by Marvel Studios, and many now-cancelled television shows made by Marvel
@@ -33,12 +34,13 @@ The FAQ page for the Marvel Movie Picker Helper Wizard App.
     <h4>Why are Marvel movies like the X-Men films, Fantastic Four, Deadpool, Venom, etc left out?</h4>
     <p>Those movies contain Marvel characters, but they were not made by Marvel Studios, and they do not take place
         in the Marvel Cinematic Universe.</p>
-    <h4>Why should I trust you? This app is obviously very subjective and I'm probably a bigger MCU fan than you!</h4>
+    <!--<h4>Why should I trust you? This app is obviously very subjective and I'm probably a bigger MCU fan than you!</h4>
     <p>If you're a bigger MCU fan than me, you aren't the target audience for this app because you've already seen
         all of the movies many times. And if your friends want to know which movies they should watch, they'll just ask you,
         so you don't need to worry about them getting bad info from this site! However, for anyone who doesn't have you as
-        a friend, this site will hopefully be more useful than having no resource at all.</p>
+        a friend, this site will hopefully be more useful than having no resource at all.</p>-->
     <h3>What Does Each Algorithm Do?</h3>
+    <p>The algorithms are currently undergoing revision - these FAQs will be updated when the revisions are complete.</p>
     <h4>Most Interconnected</h4>
     <p>Selecting the Most Interconnected option will get you a set of movies which have characters, plotlines, etc that
         are all highly interconnected with the movies you've seen, the movies you want to watch, and each other. Note:
@@ -102,6 +104,6 @@ The FAQ page for the Marvel Movie Picker Helper Wizard App.
         anymore. The task of telling someone what movies they should watch certainly sounds to me like something you
         would only expect a human to be able to do. But I don't think the programming strategies I used for this project
         would be considered AI by most programmers.</p>
-    <footer>©2020 William Locatelli.</footer>
+    <footer>©2021 William Locatelli.</footer>
 </body>
 </html>
