--- a/public/Weights.html
+++ b/public/Weights.html
@@ -9,10 +9,11 @@ Describes the rules used to determine edge weights.
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="faq.css">
-    <title>Rules For Deciding Edge Weights</title>
+    <title>Rules For Deciding Edge Weights - Which Marvel Movies Should I Watch?</title>
 </head>
 <body>
-    <h1>Which MCU Movies Should I Watch?</h1>
+    <h1>Which Marvel Movies Should I Watch?</h1>
+    <h2 class="subheading">For casual viewers who don't want to watch every movie.</h2>
     <header>
         <a href="FAQ.html"><em>Return to FAQ</em></a> ◦ <a href="/"><em>Main Page</em></a>
     </header>
@@ -23,18 +24,18 @@ Describes the rules used to determine edge weights.
         <li>The weight of an edge is equal to the <strong>highest</strong> weight of any connection between the two films. This means
             that if a film has 3 very strong connections to another film, the edge is given a weight of 10, and if a
             film has only 1 very strong connection to another film, it is also given a weight of 10.</li>
-        <li>Edges of weight less than 5 do not make a film a candidate for inclusion in recommendations. Example:
+        <li>Edges of weight less than 5 do not make a film a candidate for inclusion in recommendations. <!--Example:
             In <em>Iron Man 3</em>,
             Aldrich Killian says "Ever since that big dude with the hammer fell out of the sky, subtlety has kind of had
             its day." This doesn't mean you should watch <em>Thor</em> first if you want see <em>Iron Man 3</em>, so
-            it's really only used as a tie breaker.</li>
+            it's really only used as a tie breaker.</li>-->
         <li>Connection weights are chosen based on two types of criteria: internal references to previous movies, and
             external definition of relationship to previous movies. </li>
     </ul>
     <h3>External definitions:</h3>
     <h4>10</h4>
     <ul>
-        <li>This movie is explicitly defined as a direct sequel to the previous movie</li>
+        <li>This movie is explicitly defined as a direct sequel to the previous movie.</li>
     </ul>
     <h4>5</h4>
     <ul>
@@ -73,6 +74,6 @@ Describes the rules used to determine edge weights.
         <li>These 2 movies were conceived of, planned, and written at the same time, and for all intents and purposes can be
             seen as 2 halves of the same story.</li>
     </ul>
-    <footer>©2020 William Locatelli.</footer>
+    <footer>©2021 William Locatelli.</footer>
 </body>
 </html>
