--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@ pick the movies.
     <script src="MarvelTracker.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <title>Which MCU Movies Should I Watch?</title>
+    <title>Which Marvel Movies Should I Watch?</title>
 </head>
 <body>
     <h1>Which Marvel Movies Should I Watch?</h1>
@@ -121,7 +121,9 @@ pick the movies.
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
-    <footer>©2021 William Locatelli ◦ <a href="FAQ.html">FAQ</a> ◦ <a href="https://github.com/WilliamLocatelli/mcu-expert">Github</a>
+    <footer>©2021 William Locatelli ◦ <a href="FAQ.html">FAQ</a>
+        ◦ <a href="related-projects.html">Related projects</a>
+        ◦ <a href="https://github.com/WilliamLocatelli/mcu-expert">Github</a>
         ◦ <a href="https://www.linkedin.com/in/william-locatelli/">LinkedIn</a>
     </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
