cleanup on extra pages

--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -12,10 +12,9 @@ The FAQ page for the Marvel Movie Picker Helper Wizard App.
     <title>Frequently Asked Questions - Which Marvel Movies Should I Watch?</title>
 </head>
 <body>
-    <h1>Which Marvel Movies Should I Watch?</h1>
+    <h1><a href="/">Which Marvel Movies Should I Watch?</a></h1>
     <h2 class="subheading">For casual viewers who don't want to watch every movie.</h2>
     <h2>Frequently Asked Questions</h2>
-    <header><a href="/"><em>Return to Main Page</em></a></header>
     <h3>General</h3>
     <h4>What is the point of this app?</h4>
     <p>There are 23 movies and counting in the Marvel Cinematic Universe. You may have have seen a few of them, and
@@ -104,6 +103,9 @@ The FAQ page for the Marvel Movie Picker Helper Wizard App.
         anymore. The task of telling someone what movies they should watch certainly sounds to me like something you
         would only expect a human to be able to do. But I don't think the programming strategies I used for this project
         would be considered AI by most programmers.</p>
-    <footer>©2021 William Locatelli.</footer>
+    <footer>
+        <p><a href="/"><em>Return to Main Page</em></a></p>
+        <p>©2021 William Locatelli.</p>
+    </footer>
 </body>
 </html>
