--- a/public/Weights.html
+++ b/public/Weights.html
@@ -12,10 +12,10 @@ Describes the rules used to determine edge weights.
     <title>Rules For Deciding Edge Weights - Which Marvel Movies Should I Watch?</title>
 </head>
 <body>
-    <h1>Which Marvel Movies Should I Watch?</h1>
+    <h1><a href="/">Which Marvel Movies Should I Watch?</a></h1>
     <h2 class="subheading">For casual viewers who don't want to watch every movie.</h2>
     <header>
-        <a href="FAQ.html"><em>Return to FAQ</em></a> ◦ <a href="/"><em>Main Page</em></a>
+        <a href="FAQ.html"><em>Return to FAQ</em></a>
     </header>
     <h2>Edge Weight Rules</h2>
     <ul>
@@ -74,6 +74,9 @@ Describes the rules used to determine edge weights.
         <li>These 2 movies were conceived of, planned, and written at the same time, and for all intents and purposes can be
             seen as 2 halves of the same story.</li>
     </ul>
-    <footer>©2021 William Locatelli.</footer>
+    <footer>
+        <p><a href="/"><em>Return to Main Page</em></a></p>
+        <p>©2021 William Locatelli.</p>
+    </footer>
 </body>
 </html>
