new block arranging strategy

--- a/public/index.html
+++ b/public/index.html
@@ -80,24 +80,26 @@ pick the movies.
                         <p id="guardians-of-the-galaxy">Guardians of the Galaxy</p>
                         <p id="guardians-of-the-galaxy-vol.-2">Guardians of the Galaxy Vol. 2</p>
                     </div>
+                    <div class="row-class">
+                        <div>
+                            <p id="the-avengers">The Avengers</p>
+                            <p id="avengers:-age-of-ultron">Avengers: Age of Ultron</p>
+                            <p id="avengers:-infinity-war">Avengers: Infinity War</p>
+                        </div>
+                        <div>
+                            <p id="ant-man">Ant-Man</p>
+                            <p id="ant-man-and-the-wasp">Ant-Man and the Wasp</p>
+                            <p id="avengers:-endgame">Avengers: Endgame</p>
+                        </div>
+                    </div>
                     <div>
-                        <p id="the-avengers">The Avengers</p>
-                        <p id="avengers:-age-of-ultron">Avengers: Age of Ultron</p>
-                        <p id="avengers:-infinity-war">Avengers: Infinity War</p>
-                        <p id="avengers:-endgame">Avengers: Endgame</p>
-                    </div>
-                    <div class="end">
-                        <p id="ant-man">Ant-Man</p>
-                        <p id="ant-man-and-the-wasp">Ant-Man and the Wasp</p>
                         <p id="doctor-strange">Doctor Strange</p>
-                    </div>
-                    <div class="end">
-                        <p id="spider-man:-homecoming">Spider-Man: Homecoming</p>
-                        <p id="spider-man:-far-from-home">Spider-Man: Far From Home</p>
-                    </div>
-                    <div class="end">
                         <p id="black-panther">Black Panther</p>
                         <p id="captain-marvel">Captain Marvel</p>
+                    </div>
+                    <div>
+                        <p id="spider-man:-homecoming">Spider-Man: Homecoming</p>
+                        <p id="spider-man:-far-from-home">Spider-Man: Far From Home</p>
                     </div>
                 </div>
                 <h2>Disney+ Series</h2>
