--- a/public/related-projects.html
+++ b/public/related-projects.html
@@ -11,18 +11,19 @@
     <h1><a href="/">Which Marvel Movies Should I Watch?</a></h1>
     <h2 class="subheading">For casual viewers who don't want to watch every movie.</h2>
     <h2>Related Projects</h2>
-    <h3><a href="https://mcu.thomasrice.com">Marvel Cinematic Universe - Movie Selector</a></h3>
-    <p>This web app by Thomas Rice allows the user to explore possible watch orders by selecting
-        the movies they've watched.</p>
-    <h3><a href="https://seanlennaerts.github.io/mcuverse/">MCU Bible Verse</a></h3>
-    <p>This web app by Sean Lennaerts allows the user to search for any Marvel quote,
-        and gives them the exact quote as well as formatting the quote with its timestamp as a bible verse.</p>
-    <!--<h3><a href="https://www.smasters.net/mcutv">Unofficial MCUTV</a></h3>
-    <p>This project by Samuel Masters edits the Infinity Saga movies into a
-        50-episode TV series, with each episode containing scenes from multiple movies. </p>
-    <h3><a href="https://tdmedina21.wixsite.com/dirty30m-fan-edits/copy-of-timeline">Marvel Cinematic Universe: A Chronology</a></h3>
-    <p>This project by reddit user dirty30m places all the scenes from the MCU in chronological order.</p>-->
-
+    <main>
+        <h3><a href="https://mcu.thomasrice.com">Marvel Cinematic Universe - Movie Selector</a></h3>
+        <p>This web app by Thomas Rice allows the user to explore possible watch orders by selecting
+            the movies they've watched.</p>
+        <h3><a href="https://seanlennaerts.github.io/mcuverse/">MCU Bible Verse</a></h3>
+        <p>This web app by Sean Lennaerts allows the user to search for any Marvel quote,
+            and gives them the exact quote as well as formatting the quote with its timestamp as a bible verse.</p>
+        <!--<h3><a href="https://www.smasters.net/mcutv">Unofficial MCUTV</a></h3>
+        <p>This project by Samuel Masters edits the Infinity Saga movies into a
+            50-episode TV series, with each episode containing scenes from multiple movies. </p>
+        <h3><a href="https://tdmedina21.wixsite.com/dirty30m-fan-edits/copy-of-timeline">Marvel Cinematic Universe: A Chronology</a></h3>
+        <p>This project by reddit user dirty30m places all the scenes from the MCU in chronological order.</p>-->
+    </main>
     <footer>
         <p><a href="/"><em>Return to Main Page</em></a></p>
         <p>©2021 William Locatelli.</p>
